# serializotron

haskell/: serializotron.cabal
haskell/app/: LoadFoo.hs  LoadFooCorrect.hs  SaveFoo.hs
haskell/src/: Serializotron.hs
haskell/src/Serializotron/: Instances.hs
haskell/test/: Main.hs
haskell/test/Test/Serializotron/: MemoTests.hs
